# django-logic

./: .dockerignore  .gitignore  .travis.yml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  RELEASING.md  TODO.md  docker-compose.test.yml  makefile  pyproject.toml  requirements.txt  setup.py
.cursor/rules/: django-logic.mdc
.github/workflows/: ci.yml  consumer-gv.yml  stability.yml
app/: models.py  process.py  tasks.py
app/tests/: test_invoice_process.py
demo/: choices.py  conditions.py  models.py  process.ipynb  process.py  serializers.py  tasks.py  urls.py  views.py  viewsets.py
demo/migrations/: 0001_initial.py
demo/tests/: test_api.py  test_process.py
django_logic/: __init__.py  apps.py  checks.py  commands.py  conditions.py  conf.py  constants.py  coverage.py  display.py  draw.py  exceptions.py  logger.py  process.py  state.py  tasks.py  transition.py  utils.py
django_logic/background/: __init__.py  apps.py  dispatch.py  exceptions.py  models.py  observability.py  runner.py  serializers.py  settings.py  tasks.py  transitions.py
django_logic/background/migrations/: 0001_initial.py  0002_transitionmessage_timing.py  0003_transitionmessage_failure_side_effect_error.py  0004_transitionmessage_timeout_seconds.py  0005_transitionmessage_instance_id_text.py  0006_per_process_constraint_and_field_name.py  0007_transitionmessage_owning_process_class.py
django_logic/testing/: __init__.py  assertions.py  idempotency.py  output.py  runner.py  scenario.py  snapshot.py  tracking.py
docs/: IMPROVEMENTS_FROM_HEROKU_VALIDATION.md  INDEX.md  PLAN.md  TESTING_GUIDE.md  conf.py  index.rst  logger.md
docs/design/: BACKGROUND_TRANSITION_ANALYSIS.md  TESTING_SCENARIOS.md
docs/recipes/: nested-processes.md
docs/research/: PR-75-REVIEW.md  idea1.txt  race-condition-issue
requirements/: optionals.txt
tests/: __init__.py  celery_app.py  manage.py  models.py  settings.py  settings_redis.py  settings_stability.py  test_assert_idempotent.py  test_binding_validation.py  test_callback_isolation.py  test_conditions.py  test_core_settings_validation.py  test_coverage.py  test_cross_machine_cascade.py  test_defer_unlock.py  test_display.py  test_exception_semantics.py  test_hook_signature_validation.py  test_issue_fixes_engine.py  test_issue_fixes_testing.py  test_lock_ownership.py  test_lock_revalidate.py  test_lock_timeout.py  test_log_redaction.py  test_logger.py  test_managers.py  test_metadata.py  test_process.py  test_process_guards.py  test_process_scoped_messages.py  test_router_check.py  test_scenario.py  test_state.py  test_stranded_recovery.py  test_system_checks.py  test_transition.py  test_utils.py  urls.py  utils.py
tests/app/: models.py  process.py
tests/app/tests/: test_process.py  test_transition.py
tests/background/: apps.py  models.py  test_bg_chain.py  test_celery_dispatch.py  test_concurrency_pg.py  test_condition_disambiguated_nested.py  test_constraint_per_process.py  test_failure_side_effects.py  test_kwargs_roundtrip.py  test_nested_background.py  test_observability.py  test_parity_matrix.py  test_phase2_state_guard.py  test_restore_verification.py  test_safety_net.py  test_savepoint_isolation.py  test_serializers.py  test_settings_validation.py  test_sync_background_mutex.py  test_sync_execution.py  test_timing.py  test_validation.py  test_watchdog.py
tests/background/migrations/: 0001_initial.py  0002_widget_audit_status.py  0003_archivablewidget.py  0004_conversation.py
tests/stability/: apps.py  base.py  models.py  test_atomic_refresh.py  test_deadlocks.py  test_issue_98_concurrency.py  test_kwargs_serialization.py  test_periodic_tasks.py  test_race_conditions.py  test_state_consistency.py  test_transaction_integration.py  test_worker_crash.py
