[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-logic"
version = "0.7.0"
description = "Declarative business logic & state machines for Django — sync and durable background transitions"
readme = "README.md"
license = { text = "MIT License" }
authors = [
    { name = "Emil Balashov", email = "emil@borderless360.com" },
    { name = "Andrey Omelyanuk", email = "omelyanukandrey@gmail.com" }
]
keywords = ["django", "fsm", "state-machine", "workflow", "celery", "background", "business-logic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = [
    "django>=4.0",
    "django-model-utils>=4.5.1",
    # Celery and Redis are core dependencies, not extras. Background
    # transitions always execute through Celery in production ('sync'
    # execution exists only for tests/CI), and django-redis provides the
    # cross-process state lock (RedisState / the lock cache).
    "celery>=5.0",
    "django-redis>=5.0.0",
]

[project.optional-dependencies]
# Kept as empty aliases so existing `pip install django-logic[celery,redis]`
# pins keep resolving; both packages are core dependencies as of 0.4.0.
celery = []
redis = []
drf = [
    "djangorestframework>=3.14.0",
]
dev = [
    "djangorestframework>=3.14.0",
    "coverage>=7.0",
    "pytest>=8.0",
    "pytest-django>=4.8",
    # Driver for the PostgreSQL stability suite (make stability-*) and the
    # Postgres concurrency tests. Without it, `uv sync --extra dev` runs the
    # SQLite suite but not tests.stability.
    "psycopg[binary]>=3.1",
]

[project.urls]
Homepage = "https://github.com/Borderless360/django-logic"
Repository = "https://github.com/Borderless360/django-logic"

[tool.setuptools.packages.find]
exclude = ["tests*", "demo*"]

[tool.setuptools]
zip-safe = false

[tool.coverage.run]
source = ["django_logic"]

[tool.coverage.report]
show_missing = true
skip_empty = true
